cmake_minimum_required(VERSION 3.22)
project(volume C)

option(USE_INTRINSICS "Use AVX intrinsic functions" OFF)

set(CMAKE_C_STANDARD 11)
if(MSVC)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
    if(USE_INTRINSICS)
        add_compile_options(/arch:AVX /O2)
        add_compile_definitions(USE_INTRINSICS)
    else()
        add_compile_options(/Od)
    endif()
else()
    if(USE_INTRINSICS)
        add_compile_options(-mavx -O3)
        add_compile_definitions(USE_INTRINSICS)
    else()
        add_compile_options(-O0)
    endif()
endif()

add_executable(volume volume.c)
