cmake_minimum_required(VERSION 3.22)
project(volume C)

option(USE_INTRINSICS "Use AVX intrinsic functions" OFF)
option(PREFER_AVX512 "Prefer AVX-512 instead of AVX2 on x86-64 machines" OFF)

set(CMAKE_C_STANDARD 11)
if(MSVC)
    add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
    if(USE_INTRINSICS)
        add_compile_definitions(USE_INTRINSICS)
        add_compile_options(/O2)
        if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|AMD64|amd64|x64)$")
            if(PREFER_AVX512)
                add_compile_options(/arch:AVX512)
            else()
                add_compile_options(/arch:AVX2)
            endif()
        endif()
    else()
        add_compile_options(/Od)
    endif()
else()
    if(USE_INTRINSICS)
        add_compile_definitions(USE_INTRINSICS)
        add_compile_options(-O3)
        if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|AMD64|amd64|x64)$")
            if(PREFER_AVX512)
                add_compile_options(-mavx512f)
            else()
                add_compile_options(-mavx2)
            endif()
        endif()
    else()
        add_compile_options(-O0)
    endif()
endif()

add_executable(volume volume.c)
